<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@drawable/m_background">

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="15pt"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="82dp"
        android:background="@drawable/p_button"
        android:gravity="center_horizontal"
        android:text="@string/button3"
        android:textSize="9pt" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="15pt"
        android:layout_above="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_marginBottom="44dp"
        android:background="@drawable/p_button"
        android:gravity="center_horizontal"
        android:text="@string/button2"
        android:textSize="9pt" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="15pt"
        android:layout_above="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_marginBottom="38dp"
        android:background="@drawable/p_button"
        android:gravity="center_horizontal"
        android:text="@string/button1"
        android:textSize="9pt" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="92dp"
        android:textSize="12pt"
        android:textColor="@color/blue"
        android:text="@string/main_tips1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/main_tips2"
        android:textColor="@color/blue"
        android:textSize="12pt" />

</RelativeLayout>