<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@drawable/background">

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/save_button"
        android:text="@string/save_button" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextin"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="66dp"
        android:background="@drawable/left"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:text="@string/per_tips"
        android:textColor="@color/shadowcolor"
        android:textSize="9pt" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="19pt"
        android:layout_height="19pt"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/textView1"
        android:contentDescription="@string/image_des"
        android:src="@drawable/ic_launcher2" />

    <EditText
        android:id="@+id/editTextin"
        android:layout_width="match_parent"
        android:layout_height="40pt"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="21dp"
        android:layout_toRightOf="@+id/imageView1"
        android:background="@drawable/edit_shape"
        android:ems="10"
        android:hint="@string/in_tips"
        android:inputType="text"
        android:maxLines="5"
        android:textColor="@color/black"
        android:textSize="9pt" />

    <EditText
        android:id="@+id/editTextout"
        android:layout_width="match_parent"
        android:layout_height="40pt"
        android:layout_below="@+id/editTextin"
        android:layout_marginTop="26dp"
        android:layout_toRightOf="@+id/imageView1"
        android:background="@drawable/edit_shape"
        android:ems="10"
        android:hint="@string/out_tips"
        android:inputType="text"
        android:maxLines="5"
        android:textColor="@color/black"
        android:textSize="9pt" />

</RelativeLayout>